--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "bufferutil": "^4.0.1",
     "discord.js": "^11.5.0",
     "erlpack": "github:hammerandchisel/erlpack",
-    "ffmpeg-binaries": "^4.0.0",
+    "ffmpeg": "0.0.4",
     "fs": "0.0.1-security",
     "libsodium-wrappers": "^0.7.4",
     "node-opus": "^0.3.1",
     "simple-node-logger": "^18.12.22",
-    "ytdl-core": "^0.29.2"
+    "ytdl-core": "^0.29.2",
+    "ytdl-core-discord": "^1.0.3"
   }
 }
