--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "discord.js": "^11.5.0",
     "erlpack": "github:hammerandchisel/erlpack",
     "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^2.4.0",
+    "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
     "libsodium-wrappers": "^0.7.4",
+    "mongoose": "^5.5.11",
     "node-opus": "^0.3.1",
     "simple-node-logger": "^18.12.22",
     "ytdl-core": "^0.29.2",
