--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "ffmpeg-static": "^2.4.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
+    "is-url": "^1.2.4",
     "libsodium-wrappers": "^0.7.4",
     "mongoose": "^5.5.11",
     "node-opus": "^0.3.1",
     "simple-node-logger": "^18.12.22",
+    "youtube-search": "^1.1.4",
     "ytdl-core": "^0.29.2",
     "ytdl-core-discord": "^1.0.3"
   }
